feat: implement header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elfen leid</title>
+    <link href="https://fonts.cdnfonts.com/css/le-murmure" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/euclid-circular-a" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
